# Aemula

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  util.rs
src/chips/: mod.rs
src/chips/m6502/: mod.rs  registers.rs  status_register.rs
src/chips/m6502/addressing_modes/: absolute.rs  absolute_indexed.rs  immediate.rs  indexed_indirect_x.rs  indirect.rs  indirect_indexed_y.rs  invalid.rs  mod.rs  none.rs  zero_page.rs  zero_page_indexed.rs
src/chips/m6502/instructions/: arithmetic.rs  branch.rs  common.rs  compare.rs  flags.rs  interrupt.rs  load.rs  logical.rs  shift.rs  stack.rs  store.rs  subroutine.rs  transfer.rs  unofficial.rs
src/chips/m6507/: mod.rs
src/chips/m6522/: mod.rs
src/chips/m6532/: README.md  mod.rs  timer.rs
src/chips/m6845/: mod.rs
src/chips/mos6502/: README.md  cpu.rs  mod.rs  pins.rs  registers.rs  status_register.rs
src/chips/mos6502/addressing_modes/: absolute.rs  absolute_indexed.rs  immediate.rs  indexed_indirect_x.rs  indirect.rs  indirect_indexed_y.rs  invalid.rs  mod.rs  none.rs  zero_page.rs  zero_page_indexed.rs
src/chips/mos6502/instructions/: arithmetic.rs  bitwise.rs  branch.rs  common.rs  compare.rs  flags.rs  interrupt.rs  load.rs  mod.rs  (+7 more)
src/chips/mos6507/: README.md
src/chips/saa5050/: README.md  mod.rs  rom.rs
src/systems/: mod.rs
src/systems/atari_2600/: README.md  cartridge.rs  mod.rs  palette.rs  tia.rs
src/systems/atari_7800/: README.md
src/systems/bbc_micro/: mod.rs  video_ula.rs
test_assets/systems/atari_2600/: README.md
(+2 files in other folders)
